# soksak

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  test_conf.yaml
soksak-cli/: Cargo.toml
soksak-cli/src/: main.rs
soksak-lib/: Cargo.toml  build.rs
soksak-lib/src/: lib.rs  llm.rs
soksak-lib/src/transcribe/whisper_cpp/: mod.rs
soksak-lib/src/transcribe/whisperkit/: mod.rs
soksak-lib/src/transcribe/whisperkit/swift/: LICENSE.txt
soksak-lib/src/transcribe/whisperkit/swift/Sources/SoksakBridge/: Bridge.swift
soksak-lib/src/translate/: mod.rs
src/: config.rs  ffmpeg_decoder.rs  llm.rs  main.rs  output.rs  transcribe.rs  translate.rs
src/models/: LICENSE.txt
src/transcribe/: mod.rs  whisper_cpp.rs  whisperkit.rs
src/transcribe/swift/: Package.resolved  Package.swift
src/transcribe/swift/.build/: build.db  debug.yaml  plugin-tools.yaml  workspace-state.json
src/transcribe/swift/.build/arm64-apple-macosx/release/: plugin-tools-description.json
src/transcribe/swift/.build/arm64-apple-macosx/release/ArgumentParser-tool.build/: output-file-map.json
src/transcribe/swift/.build/arm64-apple-macosx/release/ArgumentParser.build/: output-file-map.json
src/transcribe/swift/.build/plugins/cache/: GenerateDoccReference  GenerateDoccReference-state.json  GenerateManual  GenerateManual-state.json
src/transcribe/swift/.build/repositories/WhisperKit-0ee77869/: config  packed-refs
src/transcribe/swift/.build/repositories/swift-argument-parser-54a11a8d/: packed-refs
src/transcribe/swift/.build/repositories/swift-collections-9a58d5cf/: packed-refs
src/transcribe/swift/.build/repositories/swift-jinja-c9e03d9c/: packed-refs
src/transcribe/swift/.build/repositories/swift-transformers-e50307c3/: packed-refs
src/transcribe/swift/Sources/SoksakBridge/: Bridge.swift
src/transcribe/whisper_cpp/: mod.rs
src/translate/: apple.rs  apple_bridge.swift  llm.rs  mod.rs
(+267 files in other folders)
